--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,29 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+# React Native
+
+# Dependency directories
+node_modules/
+ios/Pods/
+android/.gradle/
+android/app/build/
+android/build/
+
+# Compiled output
+ios/build/
+android/app/build/
+
+# Debug files
+*.log
+*.debug
+
+# IDE files
+.vscode/
+.idea/
+*.iml
+
+# macOS files
+.DS_Store
