--- a/wellness/WellnessApp/package.json
+++ b/wellness/WellnessApp/package.json
@@ -17,10 +17,12 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-gesture-handler": "^2.14.0"
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-svg": "^15.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-svg-transformer": "^1.4.0"
   },
   "private": true
 }
