--- a/wellness/WellnessApp/package.json
+++ b/wellness/WellnessApp/package.json
@@ -4,11 +4,12 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@miblanchard/react-native-slider": "^2.6.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.9",
@@ -18,7 +19,8 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.14.0",
-    "react-native-svg": "^15.3.0"
+    "react-native-svg": "^15.3.0",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
